# fakegl32-proto

./: .gitmodules  CMakeLists.txt  GLU32.def  OpenGL32.def  console.c  dll.c  dummy.cpp  fakepixelformat.c  vma_gen.cpp
